--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/App.js"></script>
   
   <!-- Stripe.js (load only on billing pages) -->
   <script async src="https://js.stripe.com/v3/"></script>
