--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,61 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SaaS Assessment Platform</title>
+  <meta name="description" content="SaaS Assessment Platform for creating and managing assessments">
+  <meta name="theme-color" content="#3f51b5">
+  <title>SaaS Assessly Platform</title>
+  
   <!-- PWA manifest -->
   <link rel="manifest" href="/manifest.json">
+  
+  <!-- Favicons -->
+  <link rel="icon" href="/favicon.ico" sizes="any">
+  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  
+  <!-- Preconnect to external services -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://js.stripe.com">
+  
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  
+  <!-- Security headers -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; 
+    script-src 'self' https://js.stripe.com 'unsafe-inline'; 
+    style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; 
+    font-src 'self' https://fonts.gstatic.com; 
+    img-src 'self' data:; 
+    connect-src 'self' https://*.firebaseio.com https://*.firebaseapp.com">
 </head>
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/App.js"></script>
+  <noscript>
+    <div style="padding: 1rem; text-align: center;">
+      <h1>JavaScript Required</h1>
+      <p>This application requires JavaScript to function properly. Please enable JavaScript in your browser settings.</p>
+    </div>
+  </noscript>
   
-  <!-- Stripe.js (load only on billing pages) -->
-  <script async src="https://js.stripe.com/v3/"></script>
+  <div id="root"></div>
+  
+  <!-- Stripe.js (loaded only when needed) -->
+  <script>
+    function loadStripeJS() {
+      return new Promise((resolve, reject) => {
+        if (window.Stripe) return resolve();
+        
+        const script = document.createElement('script');
+        script.src = 'https://js.stripe.com/v3/';
+        script.async = true;
+        script.onload = () => resolve();
+        script.onerror = () => reject(new Error('Failed to load Stripe.js'));
+        document.head.appendChild(script);
+      });
+    }
+    
+    // Expose for lazy loading
+    window.loadStripeJS = loadStripeJS;
+  </script>
 </body>
 </html>
